--- a/src/main/resources/FXML/viewGoods.fxml
+++ b/src/main/resources/FXML/viewGoods.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -8,26 +9,26 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
-<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/ViewGoods.css"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.netmart.Controllers.ViewGoodsController">
+<AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/ViewGoods.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.ViewGoodsController">
     <VBox prefHeight="750.0" prefWidth="850.0">
         <AnchorPane prefHeight="750.0" prefWidth="850.0">
-            <Label layoutX="46.0" layoutY="46.0" styleClass="view-title" text="VIEW GOODS"/>
-            <Line endX="661.0" layoutX="147.0" layoutY="79.0" startX="-100.0"/>
-            <TableView fx:id="view_goods_table" layoutX="46.0" layoutY="112.0" prefHeight="534.0" prefWidth="762.0">
+            <Label fx:id="view_goods" layoutX="46.0" layoutY="46.0" styleClass="view-title" text="VIEW GOODS" />
+            <Line endX="661.0" layoutX="147.0" layoutY="79.0" startX="-100.0" />
+            <TableView fx:id="view_goods_table" layoutX="46.0" layoutY="132.0" prefHeight="514.0" prefWidth="762.0">
                 <columns>
-                    <TableColumn fx:id="good_id" prefWidth="49.0" text="ID"/>
-                    <TableColumn fx:id="good_name" prefWidth="167.0" text="Good Name"/>
-                    <TableColumn fx:id="good_qty" prefWidth="98.0" text="Quantity"/>
-                    <TableColumn fx:id="good_buying_price" prefWidth="121.0" text="Buying Price"/>
-                    <TableColumn fx:id="good_selling_price" prefWidth="131.0" text="Selling Price"/>
-                    <TableColumn fx:id="good_gross_price" prefWidth="102.0" text="Gross Price"/>
-                    <TableColumn fx:id="good_date" prefWidth="93.0" text="Date"/>
+                    <TableColumn fx:id="good_id" prefWidth="49.0" text="ID" />
+                    <TableColumn fx:id="good_name" prefWidth="167.0" text="Good Name" />
+                    <TableColumn fx:id="good_qty" prefWidth="98.0" text="Quantity" />
+                    <TableColumn fx:id="good_buying_price" prefWidth="121.0" text="Buying Price" />
+                    <TableColumn fx:id="good_selling_price" prefWidth="131.0" text="Selling Price" />
+                    <TableColumn fx:id="good_gross_price" prefWidth="102.0" text="Gross Price" />
+                    <TableColumn fx:id="good_date" prefWidth="93.0" text="Date" />
                 </columns>
             </TableView>
-            <Button layoutX="47.0" layoutY="664.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="762.0"
-                    text="SUBMIT TO ISSUE"/>
+            <Button layoutX="47.0" layoutY="664.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="762.0" text="SUBMIT TO ISSUE" />
+         <ChoiceBox fx:id="category" layoutX="658.0" layoutY="93.0" prefWidth="150.0" />
+         <Label layoutX="531.0" layoutY="97.0" text="Choose Category" />
+         <Button fx:id="remove_btn" layoutX="47.0" layoutY="87.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="136.0" style="-fx-border-color: red; -fx-background-color: transparent; -fx-border-radius: 10;" styleClass="remove_btn" text="Remove Item" textFill="#e10707" />
         </AnchorPane>
     </VBox>
 </AnchorPane>
