--- a/src/main/resources/Styles/ViewGoods.css
+++ b/src/main/resources/Styles/ViewGoods.css
@@ -22,3 +22,14 @@
 .main-container Button:hover{
     -fx-cursor:hand;
 }
+
+.remove_btn{
+    -fx-background-color:transparent;
+    -fx-text-fill:red;
+    -fx-border-color:red;
+}
+
+.remove_btn:hover{
+    -fx-background-color:red;
+    -fx-text-fill:white;
+}
