--- a/src/main/resources/FXML/addGoods.fxml
+++ b/src/main/resources/FXML/addGoods.fxml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
 <AnchorPane prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/AddGoods.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.AddGoods">
     <Label layoutX="60.0" layoutY="31.0" styleClass="view-title" text="ADD GOOD" />
    <Label layoutX="591.0" layoutY="67.0" text="Date" />
-   <HBox layoutX="31.0" layoutY="116.0" prefHeight="77.0" prefWidth="791.0" AnchorPane.leftAnchor="31.0">
-      <AnchorPane prefHeight="87.0" prefWidth="791.0">
-         <Label layoutX="14.0" layoutY="14.0" styleClass="text-color" text="Good Category" />
-         <ChoiceBox fx:id="category" layoutX="10.0" layoutY="38.0" prefHeight="26.0" prefWidth="195.0" />
-      </AnchorPane>
+   <HBox layoutX="31.0" layoutY="116.0" prefHeight="77.0" prefWidth="791.0" spacing="40.0" AnchorPane.leftAnchor="31.0">
+      <VBox alignment="CENTER_LEFT" spacing="10.0">
+         <children>
+            <Label styleClass="text-color" text="Good Category" />
+            <ChoiceBox fx:id="category" prefHeight="26.0" prefWidth="195.0" />
+         </children>
+      </VBox>
+      <VBox fx:id="indexVBox" alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" spacing="10.0">
+         <children>
+            <Label styleClass="text-color" text="Index" />
+            <TextField fx:id="index" prefHeight="26.0" prefWidth="56.0" />
+         </children>
+      </VBox>
    </HBox>
    <HBox layoutX="30.0" layoutY="203.0" prefHeight="77.0" prefWidth="791.0">
       <AnchorPane prefHeight="87.0" prefWidth="791.0">
