--- a/src/main/resources/FXML/addVendor.fxml
+++ b/src/main/resources/FXML/addVendor.fxml
@@ -4,39 +4,31 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.AddVendor">
+<AnchorPane prefHeight="500.0" prefWidth="489.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.AddVendor">
    <children>
-      <VBox layoutX="-1.0" prefHeight="500.0" prefWidth="600.0">
+      <VBox layoutX="-1.0" prefHeight="550.0" prefWidth="600.0">
          <children>
-            <AnchorPane prefHeight="500.0" prefWidth="600.0">
+            <AnchorPane prefHeight="552.0" prefWidth="600.0">
                <children>
-                  <Button layoutX="496.0" layoutY="426.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="82.0" text="Add">
+                  <Button fx:id="add_btn" layoutX="416.0" layoutY="486.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="125.0" text="Add">
                      <graphic>
                         <FontAwesomeIconView glyphName="SAVE" size="15" />
                      </graphic>
                   </Button>
                   <Label layoutX="238.0" layoutY="34.0" text="ADD NEW VENDOR" />
-                  <TextField layoutX="61.0" layoutY="103.0" prefHeight="31.0" prefWidth="291.0" />
+                  <TextField fx:id="vendor_name" layoutX="61.0" layoutY="103.0" prefHeight="30.0" prefWidth="480.0" />
                   <Label layoutX="61.0" layoutY="74.0" text="Name:" />
-                  <TextField layoutX="61.0" layoutY="179.0" prefHeight="31.0" prefWidth="291.0" />
+                  <TextField fx:id="vendor_location" layoutX="61.0" layoutY="179.0" prefHeight="30.0" prefWidth="480.0" />
                   <Label layoutX="61.0" layoutY="150.0" text="Location:" />
-                  <TextField layoutX="61.0" layoutY="259.0" prefHeight="31.0" prefWidth="291.0" />
+                  <TextField fx:id="vendor_email" layoutX="61.0" layoutY="259.0" prefHeight="30.0" prefWidth="480.0" />
                   <Label layoutX="61.0" layoutY="230.0" text="Email:" />
-                  <TextField layoutX="61.0" layoutY="335.0" prefHeight="31.0" prefWidth="291.0" />
+                  <TextField fx:id="vendor_phone" layoutX="61.0" layoutY="335.0" prefHeight="30.0" prefWidth="480.0" />
                   <Label layoutX="61.0" layoutY="306.0" text="Phone:" />
-                  <TextField layoutX="61.0" layoutY="414.0" prefHeight="31.0" prefWidth="291.0" />
+                  <TextField fx:id="vendor_address" layoutX="61.0" layoutY="414.0" prefHeight="30.0" prefWidth="480.0" />
                   <Label layoutX="61.0" layoutY="385.0" text="Address:" />
-                  <ImageView fitHeight="157.0" fitWidth="200.0" layoutX="378.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../Images/korra.png" />
-                     </image>
-                  </ImageView>
                </children>
             </AnchorPane>
          </children>
