--- a/src/main/resources/FXML/viewVendors.fxml
+++ b/src/main/resources/FXML/viewVendors.fxml
@@ -3,41 +3,36 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="850.0" styleClass="main-container" stylesheets="@../Styles/ViewVendors.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.ViewVendorsController">
    <Label layoutX="50.0" layoutY="38.0" styleClass="view-title" text="VIEW VENDORS" />
    <Line endX="642.0" layoutX="151.0" layoutY="68.0" startX="-100.0" />
-   <Button fx:id="vendor_add_btn" layoutX="642.0" layoutY="80.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="152.0" text="Add Vendor">
+   <Button fx:id="vendor_remove_btn" layoutX="642.0" layoutY="80.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="152.0" text="Remove Vendor">
       <graphic>
-         <FontAwesomeIconView fill="WHITE" glyphName="PLUS" size="15" />
+         <FontAwesomeIconView fill="WHITE" glyphName="MINUS" size="15" />
       </graphic>
    </Button>
-   <HBox layoutX="50.0" layoutY="140.0" prefHeight="126.0" prefWidth="743.0">
-      <AnchorPane prefHeight="126.0" prefWidth="749.0">
-         <ImageView fitHeight="117.0" fitWidth="200.0" layoutX="7.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../Images/korra.png" />
-         </ImageView>
-         <Label layoutX="205.0" layoutY="18.0" styleClass="text-color" text="Name:" />
-         <TextField fx:id="vendor_name" layoutX="278.0" layoutY="16.0" prefHeight="26.0" prefWidth="168.0" />
-         <Label layoutX="208.0" layoutY="57.0" styleClass="text-color" text="Location:" />
-         <TextField fx:id="vendor_location" layoutX="279.0" layoutY="55.0" prefHeight="26.0" prefWidth="168.0" />
-         <Label layoutX="208.0" layoutY="94.0" styleClass="text-color" text="Email:" />
-         <TextField fx:id="vendor_email" layoutX="277.0" layoutY="91.0" prefHeight="26.0" prefWidth="168.0" />
-         <Label layoutX="474.0" layoutY="19.0" styleClass="text-color" text="Phone number:" />
-         <Label layoutX="477.0" layoutY="58.0" styleClass="text-color" text="Address:" />
-         <TextField fx:id="vendor_phone" layoutX="582.0" layoutY="17.0" prefHeight="26.0" prefWidth="152.0" />
-         <TextField fx:id="vendor_address" layoutX="582.0" layoutY="56.0" prefHeight="26.0" prefWidth="152.0" />
-      </AnchorPane>
-   </HBox>
-   <Button fx:id="vendor_save_btn" layoutX="642.0" layoutY="661.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="152.0" text="SAVE">
+    <VBox layoutX="50.0" layoutY="146.0" prefHeight="575.0" prefWidth="714.0">
+        <AnchorPane prefHeight="575.0" prefWidth="739.0">
+            <TableView fx:id="vendor_table" prefHeight="575.0" prefWidth="768.0">
+                <columns>
+                    <TableColumn fx:id="v_name" editable="false" prefWidth="181.0" sortable="false" text="Name" />
+                    <TableColumn fx:id="v_location" editable="false" minWidth="1.0" prefWidth="154.0" sortable="false" text="Location" />
+                    <TableColumn fx:id="v_email" editable="false" minWidth="0.0" prefWidth="155.0" sortable="false" text="Email" />
+                    <TableColumn fx:id="v_number" editable="false" prefWidth="147.0" sortable="false" text="Phone Number" />
+                    <TableColumn fx:id="v_address" editable="false" minWidth="9.0" prefWidth="130.0" sortable="false" text="Address" />
+                </columns>
+            </TableView>
+        </AnchorPane>
+    </VBox>
+   <Button fx:id="vendor_add_btn" layoutX="478.0" layoutY="80.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="152.0" text="Add Vendor">
       <graphic>
-         <FontAwesomeIconView fill="WHITE" glyphName="SAVE" size="15" />
+         <FontAwesomeIconView fill="WHITE" glyphName="PLUS" size="15" />
       </graphic>
    </Button>
 </AnchorPane>
