--- a/src/main/resources/FXML/leftMenu.fxml
+++ b/src/main/resources/FXML/leftMenu.fxml
@@ -11,7 +11,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="180.0" stylesheets="@../Styles/LeftMenu.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.netmart.Controllers.LeftMenuController">
    <AnchorPane prefHeight="750.0" prefWidth="181.0" styleClass="left-container">
-      <VBox layoutY="-10.0" prefHeight="101.0" prefWidth="180.0" styleClass="title-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-10.0">
+      <VBox layoutY="2.0" prefHeight="108.0" prefWidth="180.0" styleClass="title-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="2.0">
          <FontAwesomeIconView glyphName="HOME" size="30" />
          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="NetMart">
             <font>
@@ -27,13 +27,8 @@
          </Button>
          <Button fx:id="view_vendor_btn" mnemonicParsing="false" prefWidth="180.0" text="VIEW VENDORS">
             <graphic>
-               <FontAwesomeIconView glyphName="LIST" />
+               <FontAwesomeIconView glyphName="LIST" size="20" />
             </graphic></Button>
-         <Button fx:id="add_goods_btn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefWidth="180.0" text="ADD GOODS">
-            <graphic>
-               <FontAwesomeIconView glyphName="PLUS" size="20" />
-            </graphic>
-         </Button>
          <Button fx:id="view_goods_btn" layoutX="10.0" layoutY="34.0" mnemonicParsing="false" prefWidth="180.0" text="VIEW GOODS">
             <graphic>
                <FontAwesomeIconView glyphName="GRAPH" size="20" text="" />
@@ -57,7 +52,7 @@
          <Line endX="150.0" />
          <Button fx:id="logout_btn" mnemonicParsing="false" prefWidth="180.0" styleClass="alt-menu-btn" text="LOG OUT">
             <graphic>
-               <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="15" />
+               <FontAwesomeIconView glyphName="EXTERNAL_LINK" size="12" />
             </graphic>
          </Button>
       </VBox>
